Positions page with original svg court diagram

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -14,7 +14,7 @@
         <nav class="main-nav">
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
-                <li><a href="/rules">Rules</a></li>
+                <li><a href="/rules">Positions</a></li>
                 <li><a href="/quiz">Quiz</a></li>
             </ul>
         </nav>
