--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,23 +1,25 @@
 {% extends "base.html" %}
 {% block title %}Admin Dashboard{% endblock %}
 {% block content %}
-    <h1 class="mb-4">User Details</h1>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Username</th>
-                <th>Admin</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for user in users %}
+    <div class="content-container"> 
+        <h1 class="mb-4">User Details</h1>
+        <table class="table table-striped">
+            <thead>
                 <tr>
-                    <td>{{ user.id }}</td>
-                    <td>{{ user.username }}</td>
-                    <td>{{ 'Yes' if user.is_admin else 'No' }}</td>
+                    <th>ID</th>
+                    <th>Username</th>
+                    <th>Admin</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for user in users %}
+                    <tr>
+                        <td>{{ user.id }}</td>
+                        <td>{{ user.username }}</td>
+                        <td>{{ 'Yes' if user.is_admin else 'No' }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div> 
 {% endblock %}
