--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="quiz-container">
-    h1>Netball Quiz</h1>
+    <h1>Netball Quiz</h1>
 
     {% if questions %}
         <p>Test your knowledge of the rules of netball.</p>
