--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
+{% block auth_links %}
+    <li><a href="{{ url_for('auth.register') }}">Register</a></li>
+{% endblock %}
 {% block content %}
     <div class="content-section">
         <form method="POST" action="">
@@ -18,10 +21,10 @@
                 <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
         </form>
-    </div>
-    <div class="border-top pt-3">
-        <small class="text-muted">
-            Need An Account? <a class="ml-2" href="{{ url_for('auth.register') }}">Create Now</a>
-        </small>
+        <div class="border-top pt-3">
+            <small class="text-muted">
+                Need An Account? <a class="ml-2" href="{{ url_for('auth.register') }}">Create Now</a>
+            </small>
+        </div>
     </div>
 {% endblock %}
