--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         
         <!-- update video to have audio - rescreen record (link in logbook) with audio and then reconvert to mp4 and crop using restream.io -->
         <video class="rule-video" autoplay loop muted controls>
-            <source src="{{ url_for('static', filename='images/step.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='images/step.mp4') }}" type="video/mp4" width="280" height="500">
             Video of player catching ball. Your browser does not support the video tag.
         </video>
         <p>The footwork rule is one of the most important concepts to master in netball. Unlike basketball, you cannot run or dribble with the ball. Once you catch the ball, you must stop and establish a landing foot.</p>
@@ -25,7 +25,7 @@
 
     <section id="contact-rules" class="rule-section">
         <h2>Contact and Obstruction</h2> <!-- edit photo to have a measurement showing 3 ft-->
-        <img src="{{ url_for('static', filename='images/dist.png') }}" alt="A netball defender with arms up, correctly positioned 3 feet from the attacker." class="rule-image">
+        <img src="{{ url_for('static', filename='images/dist.webp') }}" alt="A netball defender with arms up, correctly positioned 3 feet from the attacker." class="rule-image" width="280" height="500">
         <p>Netball is a non-contact sport. The rules are designed to ensure fair play and prevent injuries by strictly controlling how players can interact physically.</p>
         
         <h3>Contact</h3>
