--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,6 @@
     <section id="footwork-rules" class="rule-section">
         <h2>Stepping and Footwork</h2>
         
-        <!-- update video to have audio - rescreen record (link in logbook) with audio and then reconvert to mp4 and crop using restream.io -->
         <video class="rule-video" autoplay loop muted controls>
             <source src="{{ url_for('static', filename='images/step.mp4') }}" type="video/mp4" width="280" height="500">
             Video of player catching ball. Your browser does not support the video tag.
@@ -24,7 +23,7 @@
     </section>
 
     <section id="contact-rules" class="rule-section">
-        <h2>Contact and Obstruction</h2> <!-- edit photo to have a measurement showing 3 ft-->
+        <h2>Contact and Obstruction</h2>
         <img src="{{ url_for('static', filename='images/dist.webp') }}" alt="A netball defender with arms up, correctly positioned 3 feet from the attacker." class="rule-image" width="280" height="500">
         <p>Netball is a non-contact sport. The rules are designed to ensure fair play and prevent injuries by strictly controlling how players can interact physically.</p>
         
